--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
         <!-- Image Gallery -->
         <div class="gallery">
-            <img src="plane1.jpg" alt="Museum Plane 1">
-            <img src="plane2.jpg" alt="Museum Plane 2">
-            <img src="plane3.jpg" alt="Museum Plane 3">
+            <img src="plane1.jpeg" alt="Museum Plane 1">
+            <img src="plane2.jpeg" alt="Museum Plane 2">
+            <img src="plane3.jpeg" alt="Museum Plane 3">
         </div>
 
         <!-- Call to Action Button -->
