--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
     <section class="content">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="https://via.placeholder.com/600x400/003366/ffffff?text=Plane+1" alt="Plane 1">
-            <img src="https://via.placeholder.com/600x400/003366/ffffff?text=Plane+2" alt="Plane 2">
-            <img src="https://via.placeholder.com/600x400/003366/ffffff?text=Plane+3" alt="Plane 3">
+            <img src="plane1.jpeg" alt="Plane 1">
+            <img src="plane2.jpeg" alt="Plane 2">
+            <img src="plane3.jpeg" alt="Plane 3">
         </div>
     </section>
     
