index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <p>
           The museum has rare planes, like a jet flown by Prince Charles and a royal helicopter. You can also hear great stories with an audioguide and buy souvenirs in the shop.
         </p>
+        <p>The museum is great for families and kids because there’s so much to explore and learn. Outside, there is a playground where children can play and have fun. If you get hungry, there’s a café with tasty snacks and drinks.
+
+The museum is open all year, so you can visit anytime. It’s easy to get there, and there’s parking right next to it.</p>
       </div>
       <div class="right-column">
         <div class="feature">
