index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
           The Aviation Museum in Wernigerode is a fun place with over 50 real planes and helicopters. You can see cool things like pilot helmets, engines, and cockpit models. The museum has big halls where you can get very close to the planes. You can even sit in one plane and feel like a pilot!
         </p>
         <p>
-          There is also a flight simulator where you can fly a plane or a helicopter. Afterward, you get a special certificate.
+          There is also a flight simulator where you can fly a plane or a helicopter. Afterwards, you get a special certificate.
         </p>
         <p>
           The museum has rare planes, like a jet flown by Prince Charles and a royal helicopter. You can also hear great stories with an audioguide and buy souvenirs in the shop.
         </p>
-        <p>The museum is great for families and kids because there’s so much to explore and learn. Outside, there is a playground where children can play and have fun. If you get hungry, there’s a café with tasty snacks and drinks.
+        <p>The museum is great for families and kids because there is so much to explore and learn. Outside there is a playground where children can play and have fun. If you get hungry, there is a café with tasty snacks and drinks.
 
-The museum is open all year, so you can visit anytime. It’s easy to get there, and there’s parking right next to it.</p>
+The museum is open all year, so you can visit anytime. It is easy to get there, and there is parking right next to it.</p>
       </div>
       <div class="right-column">
         <div class="feature">
